updated settings